# magicguard

./: .dockerignore  .env.example  README.md  install.ps1  install.sh  pyproject.toml  setup.py
.github/: copilot-instructions.md
data/: signatures.json
docker/: Dockerfile  README.md  build-multiarch.sh  docker-compose.yml  seccomp-profile.json
docs/: class-template.md
src/magicguard/: __init__.py
src/magicguard/cli/: __init__.py  commands.py  display.py
src/magicguard/core/: __init__.py  database.py  exceptions.py  interfaces.py  readers.py  validator.py
src/magicguard/utils/: __init__.py  config.py  data_loader.py  logger.py
tests/: test_cli_commands.py  test_cli_display.py  test_data_loader.py  test_database.py  test_readers.py  test_validator.py
